src/css/main.css
html {
    font-size: 1em;
    line-height: 1.4;
}

body {
    margin: 0;
    padding: 0;
    border-top: 10px solid;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    transition: background-color .3s;
}

a {
    border-bottom: 1px solid;
    font-weight: bold;
    text-decoration: none;
}

::selection {
    text-shadow: none;
}

.button,
#js-quote-source {
    padding: .5rem;
    display: inline-block;
    border: 2px solid;
    text-decoration: none;
    text-transform: uppercase;
    transition: all .2s;
    font-weight: normal;
}

.button:hover,
.button.hollow {
    border: 2px solid;
    background-color: transparent;
}

.button[data-loading] {
    opacity: .5;
}

.actions {
    padding: 0 0 1.5rem 0;
    text-align: center;
}

.actions .button {
    margin-bottom: .5rem;
}

.actions h1 {
    font-size: 1.75rem;
}

#quote {
    width: 85%;
    margin: 0 auto 5rem auto;
}

@media (min-width: 650px) {
    #quote {
        width: 75%;
    }
}

@media (min-width: 1000px) {
    #quote {
        width: 60%;
    }
}

.quote-text {
    font-size: 1.75rem;
    line-height: 1.25;
    opacity: 1;
    transition: opacity .3s;
}

@media (min-width: 650px) {
    .quote-text {
        font-size: 2.5rem;
    }
}

@media (min-width: 1000px) {
    .quote-text {
        font-size: 3rem;
    }
}

.wf-loading .quote-text {
    opacity: 0;
}

.quote-text.loading {
    opacity: 0;
}

.quote-attribution {
    text-align: right;
    font-size: 1rem;
}

@media (min-width: 1000px) {
    .quote-attribution {
        font-size: 1.5rem;
    }
}

#js-quote-source {
    text-transform: none;
}

.link-actions {
    margin: 0 auto;
    padding: 2rem 15%;
    background-color: rgba(0, 0, 0, 0.05);
    text-align: center;
}

.footer {
    text-align: center;
    color: #efefef;
    background-color: rgba(0, 0, 0, 0.1);
    font-size: .85rem;
    padding: .75rem;
    border-bottom: 15px solid;
    opacity: 1.5;
}

